--- a/gruene/neubauer/index.html
+++ b/gruene/neubauer/index.html
@@ -6,7 +6,7 @@
     <title>Luisa Neubauer</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles.css" />
   </head>
   <body class="gruene-root">
     <header class="party-header">
@@ -59,10 +59,16 @@
           </p>
 
           <p>
-            <strong>Persönliches Leben:</strong> Luisa Neubauer ist mit dem bekannten Moderator Louis Klamroth liiert, der die Polit-Talkshow "Hart aber fair" moderiert. Durch ihre ständige Medienpräsenz, besonders in Talkshows, ist Neubauer eine bekannte Figur im öffentlichen Diskurs. Ihre Familie, die über ein stattliches Vermögen verfügt, trägt sicherlich nicht unwesentlich zu ihrem öffentlichen Auftritt bei. Dass Klamroth seine Beziehung zu Neubauer zunächst nicht offenlegte, sorgte für Kritik, da seine Rolle im öffentlich-rechtlichen Rundfunk als neutral gelten sollte.
+            <strong>Persönliches Leben:</strong> Luisa Neubauer ist mit dem
+            bekannten Moderator Louis Klamroth liiert, der die Polit-Talkshow
+            "Hart aber fair" moderiert. Durch ihre ständige Medienpräsenz,
+            besonders in Talkshows, ist Neubauer eine bekannte Figur im
+            öffentlichen Diskurs. Ihre Familie, die über ein stattliches
+            Vermögen verfügt, trägt sicherlich nicht unwesentlich zu ihrem
+            öffentlichen Auftritt bei. Dass Klamroth seine Beziehung zu Neubauer
+            zunächst nicht offenlegte, sorgte für Kritik, da seine Rolle im
+            öffentlich-rechtlichen Rundfunk als neutral gelten sollte.
           </p>
-          
-          
 
           <h3>Politische Laufbahn</h3>
           <p>
@@ -77,9 +83,16 @@
           </p>
 
           <h3>Highlights</h3>
-<p>Luisa Neubauer unterstützte 2021 die Zero-Covid-Politik und beschuldigte im Mai Hans-Georg Maaßen ohne konkrete Beweise des Rassismus.</p>
-<p>Ihre zahlreichen Flugreisen standen im Widerspruch zu ihrem Klimaaktivismus und werfen Fragen zu ihrem Engagement für den Klimaschutz auf.</p>
-
+          <p>
+            Luisa Neubauer unterstützte 2021 die Zero-Covid-Politik und
+            beschuldigte im Mai Hans-Georg Maaßen ohne konkrete Beweise des
+            Rassismus.
+          </p>
+          <p>
+            Ihre zahlreichen Flugreisen standen im Widerspruch zu ihrem
+            Klimaaktivismus und werfen Fragen zu ihrem Engagement für den
+            Klimaschutz auf.
+          </p>
         </div>
         <img
           class="bio-image"
@@ -92,32 +105,31 @@
     <section class="party-members">
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
-          <li class="party-member-item">
-              <a href="../gruene/habeck/">Robert Habeck</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../gruene/baerbock/">Annalena Baerbock</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../gruene/lang/">Ricarda Lang</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../gruene/goering-eckardt/">Katrin Göring-Eckardt</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../gruene/fester/">Emilia Fester</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../gruene/ganserer/">Markus (Tessa) Ganserer</a>
-          </li>
+        <li class="party-member-item">
+          <a href="../habeck/">Robert Habeck</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../baerbock/">Annalena Baerbock</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../lang/">Ricarda Lang</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../goering-eckardt/">Katrin Göring-Eckardt</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../fester/">Emilia Fester</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../ganserer/">Markus (Tessa) Ganserer</a>
+        </li>
       </ul>
-  </section>  
+    </section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
     </footer>
 
     <script src="../../script.js"></script>
-
   </body>
 </html>
