--- a/gruene/ganserer/index.html
+++ b/gruene/ganserer/index.html
@@ -173,22 +173,22 @@
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
           <li class="party-member-item">
-              <a href="../gruene/habeck/">Robert Habeck</a>
+              <a href="../habeck/">Robert Habeck</a>
           </li>
           <li class="party-member-item">
-              <a href="../gruene/baerbock/">Annalena Baerbock</a>
+              <a href="../baerbock/">Annalena Baerbock</a>
           </li>
           <li class="party-member-item">
-              <a href="../gruene/lang/">Ricarda Lang</a>
+              <a href="../lang/">Ricarda Lang</a>
           </li>
           <li class="party-member-item">
-              <a href="../gruene/goering-eckardt/">Katrin Göring-Eckardt</a>
+              <a href="../goering-eckardt/">Katrin Göring-Eckardt</a>
           </li>
           <li class="party-member-item">
-              <a href="../gruene/fester/">Emilia Fester</a>
+              <a href="../fester/">Emilia Fester</a>
           </li>
           <li class="party-member-item">
-              <a href="../gruene/neubauer/">Luisa Neubauer</a>
+              <a href="../neubauer/">Luisa Neubauer</a>
           </li>
       </ul>
   </section>
