--- a/gruene/goering-eckardt/index.html
+++ b/gruene/goering-eckardt/index.html
@@ -242,22 +242,22 @@
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
         <li class="party-member-item">
-          <a href="../gruene/habeck/">Robert Habeck</a>
+          <a href="../habeck/">Robert Habeck</a>
         </li>
         <li class="party-member-item">
-          <a href="../gruene/baerbock/">Annalena Baerbock</a>
+          <a href="../baerbock/">Annalena Baerbock</a>
         </li>
         <li class="party-member-item">
-          <a href="../gruene/lang/">Ricarda Lang</a>
+          <a href="../lang/">Ricarda Lang</a>
         </li>
         <li class="party-member-item">
-          <a href="../gruene/fester/">Emilia Fester</a>
+          <a href="../fester/">Emilia Fester</a>
         </li>
         <li class="party-member-item">
-          <a href="../gruene/neubauer/">Luisa Neubauer</a>
+          <a href="../neubauer/">Luisa Neubauer</a>
         </li>
         <li class="party-member-item">
-          <a href="../gruene/ganserer/">Markus (Tessa) Ganserer</a>
+          <a href="../ganserer/">Markus (Tessa) Ganserer</a>
         </li>
       </ul>
     </section>
