party zu members links

--- a/afd/index.html
+++ b/afd/index.html
@@ -241,7 +241,7 @@
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
         <li class="party-member-item">
-          <a href="weidel.html">Alice Weidel</a>
+          <a href="../afd/weidel/">Alice Weidel</a>
         </li>
         <li class="party-member-item">Tino Chrupalla</li>
         <li class="party-member-item">Björn Höcke</li>
