--- a/spd/index.html
+++ b/spd/index.html
@@ -588,15 +588,17 @@
     <section class="party-members">
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
-        <li class="party-member-item"><a href="scholz.html">Olaf Scholz</a></li>
         <li class="party-member-item">
-          <a href="klingbeil.html">Lars Klingbeil</a>
+          <a href="../spd/scholz/">Olaf Scholz</a>
         </li>
         <li class="party-member-item">
-          <a href="esken.html">Saskia Esken</a>
+          <a href="../spd/klingbeil/">Lars Klingbeil</a>
         </li>
         <li class="party-member-item">
-          <a href="faeser.html">Nancy Faeser</a>
+          <a href="../spd/esken/">Saskia Esken</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../spd/faeser/">Nancy Faeser</a>
         </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
