spd links members

--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -275,13 +275,13 @@
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
         <li class="party-member-item">
-          <a href="scholz.html">Olaf Scholz</a>
+          <a href="../scholz/">Olaf Scholz</a>
         </li>
         <li class="party-member-item">
-          <a href="klingbeil.html">Lars Klingbeil</a>
+          <a href="../klingbeil/">Lars Klingbeil</a>
         </li>
         <li class="party-member-item">
-          <a href="esken.html">Saskia Esken</a>
+          <a href="../esken/">Saskia Esken</a>
         </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
