--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -172,13 +172,13 @@
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
         <li class="party-member-item">
-          <a href="scholz.html">Olaf Scholz</a>
+          <a href="../scholz/">Olaf Scholz</a>
         </li>
         <li class="party-member-item">
-          <a href="klingbeil.html">Lars Klingbeil</a>
+          <a href="../klingbeil/">Lars Klingbeil</a>
         </li>
         <li class="party-member-item">
-          <a href="faeser.html">Nancy Faeser</a>
+          <a href="../faeser/">Nancy Faeser</a>
         </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
