--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -432,14 +432,14 @@
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
         <li class="party-member-item">
-          <a href="klingbeil.html">Lars Klingbeil</a>
-        </li>
-        <li class="party-member-item">
-          <a href="esken.html">Saskia Esken</a>
-        </li>
-        <li class="party-member-item">
-          <a href="faeser.html">Nancy Faeser</a>
-        </li>
+          <a href="../esken/">Saskia Esken</a>
+      </li>
+      <li class="party-member-item">
+        <a href="../klingbeil/">Lars Klingbeil</a>
+    </li>
+    <li class="party-member-item">
+      <a href="../faeser/">Nancy Faeser</a>
+  </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
     </section>
