--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- SPD-Logo als Link zu spd.html -->
-        <a href="spd.html">
+        <a href="../">SPD</a>
           <img
             src="https://i.imgur.com/A642CgB.png"
             alt="SPD-Logo"
@@ -185,7 +185,7 @@
           </p>
 
           <div class="party-highlight-hashtags">
-            <a href="spd.html">#spd</a>
+            <a href="../">#spd</a>
             <span class="hashtag">#regenbogenbinde</span>
             <span class="hashtag">#katar</span>
             <span class="hashtag">#diskriminierung</span>
@@ -264,7 +264,7 @@
             <span class="hashtag">#csd</span>
             <span class="hashtag">#haltung</span>
             <span class="hashtag">#faeser</span>
-            <a href="spd.html">#spd</a>
+            <a href="../">#spd</a>
             <span class="hashtag">#innenministerin</span>
           </div>
         </div>
