--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- SPD-Logo als Link zu spd.html -->
-        <a href="spd.html">
+        <a href="../">SPD</a>
           <img
             src="https://i.imgur.com/A642CgB.png"
             alt="SPD-Logo"
@@ -206,7 +206,7 @@
             <span class="hashtag">#cumex</span>
             <span class="hashtag">#warburg</span>
             <span class="hashtag">#steuern</span>
-            <a href="scholz.html">#scholz</a>
+            <a href="../">#spd</a>
           </p>
         </div>
         <!-- Ende der collapsible-content -->
@@ -314,9 +314,8 @@
 
           <p class="party-highlight-hashtags">
             <span class="hashtag">#wirecard</span>
-            <a href="scholz.html">#scholz</a>
             <span class="hashtag">#bafin</span>
-            <a href="spd.html">#spd</a>
+            <a href="../">#spd</a>
           </p>
 
         <!-- Ende der collapsible-content -->
@@ -418,9 +417,8 @@
 
           <p class="party-highlight-hashtags">
             <span class="hashtag">g20</span>
-            <a href="spd.html">#spd</a>
+            <a href="../">#spd</a>
             <span class="hashtag">#hamburg</span>
-            <a href="scholz.html">#scholz</a>
           </p>
 
         <!-- Ende der collapsible-content -->
