--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- SPD-Logo als Link zu spd.html -->
-        <a href="spd.html">
+        <a href="../">SPD</a>
           <img
             src="https://i.imgur.com/A642CgB.png"
             alt="SPD-Logo"
@@ -159,7 +159,7 @@
           </p>
 
           <div class="party-highlight-hashtags">
-            <a href="spd.html">#spd</a>
+            <a href="../">#spd</a>
             <span class="hashtag">#covidioten</span>
             <span class="hashtag">#berlin</span>
             <span class="hashtag">#corona</span>
