--- a/spd/klingbeil/index.html
+++ b/spd/klingbeil/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- SPD-Logo als Link zu spd.html -->
-        <a href="spd.html">
+        <a href="../">SPD</a>
           <img
             src="https://i.imgur.com/A642CgB.png"
             alt="SPD-Logo"
@@ -147,8 +147,8 @@
           <p class="party-highlight-date"><strong>Zeitraum:</strong> 2025</p>
 
           <div class="party-highlight-hashtags">
-            <a href="afd.html">#afd</a>
-            <a href="spd.html">#spd</a>
+            <a href="../afd">#afd</a>
+            <a href="../">#spd</a>
             <span class="hashtag">#nazis</span>
             <span class="hashtag">#klingbeil</span>
           </div>
