party link from members

--- a/afd/weidel/index.html
+++ b/afd/weidel/index.html
@@ -25,7 +25,7 @@
           <h1 class="party-politician-name">ALICE WEIDEL</h1>
         </div>
 
-        <!-- SPD-Logo als Link zu spd.html -->
+        <!-- AFD-Logo als Link zu AfD -->
         <a href="../">
             <img
               src="https://i.imgur.com/av3Eoww.png"
