--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -25,7 +25,7 @@
           <h1 class="party-politician-name">ANNALENA BAERBOCK</h1>
         </div>
 
-        <!-- Grüne-Logo als Link zu gruene.html -->
+        <!-- Grüne-Logo als Link zu gruene -->
         <a href="../">
           <img
             src="https://i.imgur.com/xe72gQi.png"
@@ -351,7 +351,6 @@
         </li>
       </ul>
     </section>
-    
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
