--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -25,8 +25,8 @@
           <h1 class="party-politician-name">OLAF SCHOLZ</h1>
         </div>
 
-        <!-- SPD-Logo als Link zu spd.html -->
-        <a href="../">SPD</a>
+        <!-- SPD-Logo als Link zu spd -->
+        <a href="../">
           <img
             src="https://i.imgur.com/A642CgB.png"
             alt="SPD-Logo"
