--- a/gruene/lang/index.html
+++ b/gruene/lang/index.html
@@ -25,8 +25,8 @@
           <h1 class="party-politician-name">RICARDA LANG</h1>
         </div>
 
-        <!-- Grüne-Logo als Link zu gruene.html -->
-        <a href="gruene.html">
+        <!-- Grüne-Logo als Link zu gruene -->
+        <a href="../">
           <img
             src="https://i.imgur.com/xe72gQi.png"
             alt="Grünen-Logo"
