grüne links zu anderen parteien

--- a/gruene/index.html
+++ b/gruene/index.html
@@ -106,7 +106,16 @@
   </p>
 
   <p class="party-highlight-description">
-    Unter anderem stimmten die folgenden Grünen-Abgeordneten für die Impfpflicht: <a href="baerbock.html">Baerbock</a>, <a href="fester.html">Fester</a>, <a href="goering-eckardt.html">Göring-Eckardt</a>, Hofreiter, <a href="habeck.html">Habeck</a>, Künast, <a href="lang.html">Lang</a>, Özdemir, Nouripour und Roth.
+    Unter anderem stimmten die folgenden Grünen-Abgeordneten für die Impfpflicht: 
+    <a href="../baerbock/">Baerbock</a>, 
+    <a href="../fester/">Fester</a>, 
+    <a href="../goering-eckardt/">Göring-Eckardt</a>, 
+    Hofreiter, 
+    <a href="../habeck/">Habeck</a>, 
+    Künast, 
+    <a href="../lang/">Lang</a>, 
+    Özdemir, 
+    Nouripour und Roth.
   </p>
 
   <p class="party-highlight-description">
@@ -118,8 +127,14 @@
   </p>
 
   <p class="party-highlight-description">
-    Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus anderen Parteien verhindert werden: Die <a href="cducsu.html"><strong>CDU/CSU</strong></a>, die <a href="fdp.html"><strong>FDP</strong></a> und die <a href="linke.html"><strong>Linke</strong></a> stimmten größtenteils gegen das Gesetz. Die <a href="afd.html"><strong>AfD</strong></a> war die einzige Partei, die geschlossen ohne Ausnahme gegen die Impfpflicht stimmte.
+    Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus anderen Parteien verhindert werden: 
+    Die <a href="../../cducsu/"><strong>CDU/CSU</strong></a>, 
+    die <a href="../../fdp/"><strong>FDP</strong></a> und 
+    die <a href="../../linke/"><strong>Linke</strong></a> stimmten größtenteils gegen das Gesetz. 
+    Die <a href="../../afd/"><strong>AfD</strong></a> war die einzige Partei, die geschlossen ohne Ausnahme gegen die Impfpflicht stimmte.
   </p>
+</div>
+
   
       <p class="party-highlight-date">
         <strong>Zeitraum:</strong> April 2022
