--- a/gruene/index.html
+++ b/gruene/index.html
@@ -114,8 +114,7 @@
     <a href="../habeck/">Habeck</a>, 
     Künast, 
     <a href="../lang/">Lang</a>, 
-    Özdemir, 
-    Nouripour und Roth.
+    Özdemir, Nouripour und Roth.
   </p>
 
   <p class="party-highlight-description">
@@ -165,7 +164,7 @@
       <p class="party-highlight-hashtags">
         <span class="hashtag">#impfpflicht</span>
         <span class="hashtag">#corona</span>
-        <a href="gruene.html">#gruene</a>
+        <a href="../">#gruene</a>
       </p>
     </div>
     <!-- Ende der collapsible-content -->
@@ -263,8 +262,8 @@
             <span class="hashtag">#kosovo</span>
             <span class="hashtag">#nato</span>
             <span class="hashtag">#schroeder</span>
-            <a href="spd.html">#spd</a>
-            <a href="gruene.html">#gruene</a>
+            <a href="../../spd/">#spd</a>
+            <a href="../">#gruene</a>
             <span class="hashtag">#fischer</span>
           </p>
         </div>
