grüne html links

--- a/gruene/index.html
+++ b/gruene/index.html
@@ -107,13 +107,13 @@
 
   <p class="party-highlight-description">
     Unter anderem stimmten die folgenden Grünen-Abgeordneten für die Impfpflicht: 
-    <a href="../baerbock/">Baerbock</a>, 
-    <a href="../fester/">Fester</a>, 
-    <a href="../goering-eckardt/">Göring-Eckardt</a>, 
+    <a href="baerbock/">Baerbock</a>, 
+    <a href="fester/">Fester</a>, 
+    <a href="goering-eckardt/">Göring-Eckardt</a>, 
     Hofreiter, 
-    <a href="../habeck/">Habeck</a>, 
+    <a href="habeck/">Habeck</a>, 
     Künast, 
-    <a href="../lang/">Lang</a>, 
+    <a href="lang/">Lang</a>, 
     Özdemir, Nouripour und Roth.
   </p>
 
