--- a/gruene/index.html
+++ b/gruene/index.html
@@ -164,7 +164,7 @@
       <p class="party-highlight-hashtags">
         <span class="hashtag">#impfpflicht</span>
         <span class="hashtag">#corona</span>
-        <a href="../">#gruene</a>
+        <a href="./">#gruene</a>
       </p>
     </div>
     <!-- Ende der collapsible-content -->
@@ -263,7 +263,7 @@
             <span class="hashtag">#nato</span>
             <span class="hashtag">#schroeder</span>
             <a href="../../spd/">#spd</a>
-            <a href="../">#gruene</a>
+            <a href="./">#gruene</a>
             <span class="hashtag">#fischer</span>
           </p>
         </div>
