spd links zu anderen parteien

--- a/spd/index.html
+++ b/spd/index.html
@@ -129,51 +129,9 @@
         <!-- Zusammenklappbarer Inhalt -->
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Im April 2022 stimmte die <a href="spd.html">SPD</a> gemeinsam mit
-            den <a href="gruene.html">Grünen</a> im Bundestag für eine
-            allgemeine Impfpflicht gegen COVID-19. Diese Entscheidung stieß auf
-            massive Ablehnung und führte zu landesweiten Protesten, da viele
-            Menschen die Zwangsmaßnahme als einen direkten Angriff auf ihre
-            persönlichen Freiheiten und ihr Recht auf körperliche Unversehrtheit
-            sahen.
-          </p>
-          <p class="party-highlight-description">
-            Unter anderem stimmten die folgenden
-            <a href="spd.html">SPD</a>-Abgeordneten für die Impfpflicht:
-            <a href="esken.html">Esken</a>, Heil,
-            <a href="klingbeil.html">Klingbeil</a>, Kühnert, Lauterbach und
-            <a href="scholz.html">Scholz</a>.
-          </p>
-          <p class="party-highlight-description">
-            Kritiker warfen der <a href="spd.html">SPD</a> vor, das fundamentale
-            Recht jedes Einzelnen auf körperliche Unversehrtheit zu ignorieren.
-            Der Staat hat nicht das Recht, den Bürgern vorzuschreiben, was sie
-            mit ihrem Körper anstellen. Die Entscheidung, eine Impfpflicht
-            durchzusetzen, wäre ein schwerwiegender Eingriff in die persönliche
-            Freiheit und die Selbstbestimmung der Menschen gewesen und hätte die
-            Gesellschaft weiter gespalten.
-          </p>
-          <p class="party-highlight-description">
-            Zudem war der Nutzen der sogenannten "Impfung" fragwürdig. Viele
-            gesundheitliche Risiken und Nebenwirkungen wurden entweder
-            verschwiegen oder heruntergespielt. Eine ordentliche Aufklärung über
-            mögliche Risiken und langfristige Auswirkungen wurde weitestgehend
-            verhindert, wodurch die Menschen in ihrer Entscheidungsfreiheit und
-            -kompetenz massiv eingeschränkt wurden.
-          </p>
-          <p class="party-highlight-description">
-            Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus
-            anderen Parteien verhindert werden: Die
-            <a href="cducsu.html">CDU/CSU</a>, die
-            <a href="fdp.html">FDP</a> und die
-            <a href="linke.html">Linke</a> stimmten größtenteils gegen das
-            Gesetz. Die <a href="afd.html">AfD</a> war die einzige Partei, die
-            geschlossen ohne Ausnahme gegen die Impfpflicht stimmte.
-          </p>
-          <p class="party-highlight-description">
-            Im April 2022 stimmte die <a href="spd.html">SPD</a> gemeinsam mit
-            den <a href="gruene.html">Grünen</a> im Bundestag für eine
-            allgemeine Impfpflicht gegen COVID-19. Diese Entscheidung stieß auf
+            Im April 2022 stimmte die <a href="./">SPD</a> gemeinsam mit den
+            <a href="../../gruene/">Grünen</a> im Bundestag für eine allgemeine
+            Impfpflicht gegen COVID-19. Diese Entscheidung stieß auf
             <strong>massive Ablehnung</strong> und führte zu
             <mark>landesweiten Protesten</mark>, da viele Menschen die
             Zwangsmaßnahme als einen direkten Angriff auf ihre
@@ -182,18 +140,18 @@
           </p>
           <p class="party-highlight-description">
             Unter anderem stimmten die folgenden
-            <a href="spd.html">SPD</a>-Abgeordneten für die Impfpflicht:
+            <a href="./">SPD</a>-Abgeordneten für die Impfpflicht:
             <a href="esken.html">Esken</a>, Heil,
             <a href="klingbeil.html">Klingbeil</a>, Kühnert, Lauterbach und
             <a href="scholz.html">Scholz</a>.
           </p>
           <p class="party-highlight-description">
-            Kritiker warfen der <a href="spd.html">SPD</a> vor, das fundamentale
-            Recht jedes Einzelnen auf
-            <strong>körperliche Unversehrtheit</strong> zu ignorieren. Der Staat
-            hat nicht das Recht, den Bürgern vorzuschreiben, was sie mit ihrem
-            Körper anstellen. Die Entscheidung, eine Impfpflicht durchzusetzen,
-            wäre ein schwerwiegender Eingriff in die
+            Kritiker warfen der <a href="./">SPD</a> vor, das fundamentale Recht
+            jedes Einzelnen auf <strong>körperliche Unversehrtheit</strong> zu
+            ignorieren. Der Staat hat nicht das Recht, den Bürgern
+            vorzuschreiben, was sie mit ihrem Körper anstellen. Die
+            Entscheidung, eine Impfpflicht durchzusetzen, wäre ein
+            schwerwiegender Eingriff in die
             <strong>persönliche Freiheit</strong> und die
             <strong>Selbstbestimmung</strong> der Menschen gewesen und hätte die
             Gesellschaft weiter gespalten.
@@ -210,10 +168,10 @@
           <p class="party-highlight-description">
             Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus
             anderen Parteien verhindert werden: Die
-            <a href="cducsu.html">CDU/CSU</a>, die
-            <a href="fdp.html">FDP</a> und die
-            <a href="linke.html">Linke</a> stimmten größtenteils gegen das
-            Gesetz. Die <a href="afd.html">AfD</a> war die einzige Partei, die
+            <a href="../../cducsu/">CDU/CSU</a>, die
+            <a href="../../fdp/">FDP</a> und die
+            <a href="../../linke/">Linke</a> stimmten größtenteils gegen das
+            Gesetz. Die <a href="../../afd/">AfD</a> war die einzige Partei, die
             <strong>geschlossen ohne Ausnahme</strong> gegen die Impfpflicht
             stimmte.
           </p>
@@ -250,8 +208,8 @@
           <p class="party-highlight-hashtags">
             <span class="hashtag">#impfpflicht</span>
             <span class="hashtag">#corona</span>
-            <a href="spd.html">#spd</a>
-            <a href="gruene.html">#gruene</a>
+            <a href="./">#spd</a>
+            <a href="../../gruene/">#gruene</a>
           </p>
         </div>
         <!-- Ende der collapsible-content -->
@@ -575,7 +533,7 @@
             <span class="hashtag">#kosovo</span>
             <span class="hashtag">#nato</span>
             <span class="hashtag">#schroeder</span>
-            <a href="spd.html">#spd</a>
+            <a href="./">#spd</a>
             <a href="gruene.html">#gruene</a>
             <span class="hashtag">#fischer</span>
           </p>
