--- a/spd/index.html
+++ b/spd/index.html
@@ -141,9 +141,9 @@
           <p class="party-highlight-description">
             Unter anderem stimmten die folgenden
             <a href="./">SPD</a>-Abgeordneten für die Impfpflicht:
-            <a href="esken.html">Esken</a>, Heil,
-            <a href="klingbeil.html">Klingbeil</a>, Kühnert, Lauterbach und
-            <a href="scholz.html">Scholz</a>.
+            <a href="esken/">Esken</a>, Heil,
+            <a href="klingbeil/">Klingbeil</a>, Kühnert, Lauterbach und
+            <a href="scholz/">Scholz</a>.
           </p>
           <p class="party-highlight-description">
             Kritiker warfen der <a href="./">SPD</a> vor, das fundamentale Recht
@@ -327,7 +327,7 @@
             <span class="hashtag">#cumex</span>
             <span class="hashtag">#warburg</span>
             <span class="hashtag">#steuern</span>
-            <a href="scholz.html">#scholz</a>
+            <a href="scholz/">#scholz</a>
           </p>
         </div>
         <!-- Ende der collapsible-content -->
@@ -426,7 +426,7 @@
 
           <p class="party-highlight-hashtags">
             <span class="hashtag">#wirecard</span>
-            <a href="scholz.html">#scholz</a>
+            <a href="scholz/">#scholz</a>
             <span class="hashtag">#bafin</span>
           </p>
         </div>
@@ -534,7 +534,7 @@
             <span class="hashtag">#nato</span>
             <span class="hashtag">#schroeder</span>
             <a href="./">#spd</a>
-            <a href="gruene.html">#gruene</a>
+            <a href="../../gruene/">#gruene</a>
             <span class="hashtag">#fischer</span>
           </p>
         </div>
