klingbeil link zu afd

--- a/spd/klingbeil/index.html
+++ b/spd/klingbeil/index.html
@@ -147,7 +147,7 @@
           <p class="party-highlight-date"><strong>Zeitraum:</strong> 2025</p>
 
           <div class="party-highlight-hashtags">
-            <a href="../afd">#afd</a>
+            <a href="../../afd/">#afd</a>
             <a href="../">#spd</a>
             <span class="hashtag">#nazis</span>
             <span class="hashtag">#klingbeil</span>
