--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -191,8 +191,8 @@
           <div class="party-highlight-hashtags">
             <span class="hashtag">#wirtschaft</span>
             <span class="hashtag">#insolvenz</span>
-            <a href="habeck.html">#habeck</a>
-            <a href="gruene.html">#grüne</a>
+            <a href="./">#habeck</a>
+            <a href="../">#grüne</a>
           </div>
         </div>
       </div>
@@ -256,8 +256,8 @@
           <div class="party-highlight-hashtags">
             <span class="hashtag">#wirtschaft</span>
             <span class="hashtag">#finanzen</span>
-            <a href="habeck.html">#habeck</a>
-            <a href="gruene.html">#grüne</a>
+            <a href="./">#habeck</a>
+            <a href="../">#grüne</a>
           </div>
         </div>
       </div>
