--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -487,7 +487,9 @@
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
         <li class="party-member-item">Angela Merkel</li>
-        <li class="party-member-item">Friedrich Merz</li>
+        <li class="party-member-item">
+          <a href="../cducsu/merz/">Friedrich Merz</a>
+        </li>
         <li class="party-member-item">Markus Söder</li>
         <li class="party-member-item">Armin Laschet</li>
       </ul>
