--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -160,6 +160,15 @@
             Versprechen.
           </p>
 
+          <div class="smallvideo-container">
+            <iframe
+              src="https://www.youtube.com/embed/xoCBrQmMRAY?si=U9ioYBlH_BvJiV9X"
+              title="Der Verrat"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Wahlkampf 2025 – März 2025
           </p>
@@ -183,26 +192,10 @@
 
     <section class="party-members">
       <h2 class="party-section-title">Weitere Mitglieder</h2>
-      <ul class="party-members-list">
-        <li class="party-member-item">
-          <a href="../habeck/">Robert Habeck</a>
-        </li>
-        <li class="party-member-item">
-          <a href="../baerbock/">Annalena Baerbock</a>
-        </li>
-        <li class="party-member-item">
-          <a href="../lang/">Ricarda Lang</a>
-        </li>
-        <li class="party-member-item">
-          <a href="../goering-eckardt/">Katrin Göring-Eckardt</a>
-        </li>
-        <li class="party-member-item">
-          <a href="../fester/">Emilia Fester</a>
-        </li>
-        <li class="party-member-item">
-          <a href="../neubauer/">Luisa Neubauer</a>
-        </li>
-      </ul>
+      <li class="party-member-item">Angela Merkel</li>
+      <li class="party-member-item">Markus Söder</li>
+      <li class="party-member-item">Armin Laschet</li>
+    </ul>
     </section>
 
     <footer class="party-footer">
