2. video zu merz

--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -167,6 +167,12 @@
               frameborder="0"
               allowfullscreen
             ></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/BYGHsJgWV6E?si=2A3ugXqTwp82-VbL"
+              title="„Verrat“, „Täuschung“, „Verar...“! Eskalation nach Merz' Schulden-Wortbruch!"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
           </div>
 
           <p class="party-highlight-date">
