--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -161,19 +161,22 @@
           </p>
 
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/xoCBrQmMRAY?si=U9ioYBlH_BvJiV9X"
               title="Der Verrat"
               frameborder="0"
               allowfullscreen
             ></iframe>
-            <iframe
+              </div>
+            <div class="video-wrapper"><iframe
               src="https://www.youtube.com/embed/BYGHsJgWV6E?si=2A3ugXqTwp82-VbL"
               title="„Verrat“, „Täuschung“, „Verar...“! Eskalation nach Merz' Schulden-Wortbruch!"
               frameborder="0"
               allowfullscreen
             ></iframe>
           </div>
+              </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Wahlkampf 2025 – März 2025
