--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -160,8 +160,8 @@
             Versprechen.
           </p>
 
-          <div class="smallvideo-container">
-            <div class="video-wrapper">
+<div class="smallvideo-container two-videos">
+  <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/xoCBrQmMRAY?si=U9ioYBlH_BvJiV9X"
               title="Der Verrat"
