--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -154,7 +154,7 @@
             <a
               href="https://www.spiegel.de/politik/deutschland/saskia-esken-darf-demonstranten-covidioten-nennen-a-c697ef3d-d04b-41f4-a8b4-d2f350fa7138"
               target="_blank"
-              >Esken darf Demonstranten "Covidioten" nennen</a
+              >Spiegel: Esken darf Demonstranten "Covidioten" nennen</a
             >
           </p>
 
