--- a/afd/weidel/index.html
+++ b/afd/weidel/index.html
@@ -113,6 +113,7 @@
               allowfullscreen
             ></iframe>
           </div>
+   </div>
     
         <p class="party-highlight-date">
           <strong>Zeitraum:</strong> August 2020
