--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -158,7 +158,8 @@
             gesellschaftliche Klima in Deutschland haben.
         </p>
 
-          <div class="smallvideo-container">
+        <div class="smallvideo-container">
+          <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/kDQki0MMFh4?si=OCHL72I_swL-J_Ao"
               title="Flüchtlingspolitik: Wir schaffen das-Statement von Angela Merkel am 31.08.2015"
@@ -166,6 +167,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> September 2015 - heute
