--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -144,6 +144,7 @@
           </p>
 
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/TJCj3U33KPI?si=yGtVr3X_q-sypWOT"
               title="Annalena Baerbock: We are fighting a war against Russia."
@@ -151,6 +152,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Januar 2023
@@ -207,6 +209,7 @@
           </p>
 
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/eHNo4Sg6TTg?si=Ti4azlJXYUuxNmF1"
               title="Baerbocks 360-Grad-Wende"
@@ -214,6 +217,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Februar 2023
@@ -275,7 +279,10 @@
             sollte, in Frage.
           </p>
 
+          </div>
+
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/6s3jGyDKUMA?si=lgUXgDwVTFsp31ZI"
               title="Heftige Kritik an Aussage von Annalena Baerbock"
@@ -283,6 +290,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> September 2022
