--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -132,7 +132,8 @@
             eine Behauptung, die wissenschaftlich nicht haltbar war.
         </p>        
 
-          <div class="smallvideo-container">
+        <div class="smallvideo-container">
+          <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/Tj8r_gLxSz0?si=RPqSmza427x1rvfX"
               title="Fester mit Wutrede bei Impfdebatte: 'Will meine Freiheit zurück'"
@@ -140,6 +141,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> März 2022
@@ -206,7 +208,8 @@
             Aufmerksamkeit erzeugen wollte.
         </p>        
 
-          <div class="smallvideo-container">
+        <div class="smallvideo-container">
+          <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/pNnPAZsQ5Ik?si=y2_WavtTMpPegYPD"
               title="Emilia Fester will Wahlrecht für Zweijährige"
@@ -214,6 +217,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Juli 2022
