--- a/gruene/ganserer/index.html
+++ b/gruene/ganserer/index.html
@@ -138,7 +138,8 @@
             für Trans-Personen ging.
         </p>        
 
-          <div class="smallvideo-container">
+        <div class="smallvideo-container">
+          <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/D4kMJJ8XBBk?si=MOWAcAF8eDhvXPxM"
               title="Ganserer in Reizwäsche im Bundestag"
@@ -146,6 +147,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Februar 2023
