--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -168,6 +168,7 @@
 
           <!-- Eingebettetes YouTube-Video -->
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/3F3XjET9aCM"
               title="Robert Habecks Wirtschaftslogik"
@@ -175,6 +176,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> September 2022
@@ -232,6 +234,7 @@
           </p>
 
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/sCJmvE-vbN8?si=M3yjcdCfWhf9ob14"
               title="Herr Habeck, warum muss ich ihnen das erklären?"
@@ -239,6 +242,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> August 2018
