--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -163,6 +163,7 @@
           </p>
 
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/hA0OQm8Gecs?si=qlXgxpxDltFS9I88"
               title="WM 2022: Nach der Pleite gegen Japan herrscht Krisen-Stimmung in Katar"
@@ -170,6 +171,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Mai 2022
@@ -237,6 +239,7 @@
           </p>
 
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/ZnV5td6qX8E?si=ILBEHmhE8VUthJgB"
               title="CSD Frankfurt 2023 mit Nancy Faeser"
@@ -244,6 +247,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Juli 2023
