--- a/spd/klingbeil/index.html
+++ b/spd/klingbeil/index.html
@@ -135,14 +135,17 @@
           <p class="party-highlight-description">
             Klingbeil bezeuchnet die AfD Alice Weidel als Nazis.
           </p>
-          <div class="smallvideo-container">
-            <iframe
+
+<div class="smallvideo-container">
+  <div class="video-wrapper">
+    <iframe
               src="https://www.youtube.com/embed/0J7BjiDOOnw?si=epWuwwc4rpGnfldF"
               title="'Haben Sie mich gerade als Nazi bezeichnet?'' - Parteichefs geraten aneinander | ntv"
               frameborder="0"
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date"><strong>Zeitraum:</strong> 2025</p>
 
