--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -168,6 +168,7 @@
           </p>
 
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/N_oEFSMoMuA?si=7HmS1znalZhbHahV"
               title="Herr Scholz erinnert sich nicht"
@@ -175,6 +176,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> 2016 – heute
@@ -271,6 +273,7 @@
           </p>
   
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
               src="https://www.youtube.com/embed/c4VwrmbYfgY?si=CJMBs7HT_MXxoO0Z"
               title="VORWÜRFE GEGEN SCHOLZ: Finanzminister wusste seit Februar 2019 von Fall Wirecard"
@@ -278,6 +281,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> 2015 – 2020
@@ -375,6 +379,7 @@
           </p>
 
           <div class="smallvideo-container">
+            <div class="video-wrapper">
             <iframe
             src="https://www.youtube.com/embed/tAtZThq2BLw?si=QJJpcWqL_2HEiiAC""
               title="Hamburg: G20-Proteste arten in Häuserkampf aus"
@@ -382,6 +387,7 @@
               allowfullscreen
             ></iframe>
           </div>
+        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Juli 2017
