--- a/afd/weidel/index.html
+++ b/afd/weidel/index.html
@@ -105,15 +105,16 @@
         Ihre Äußerung wurde von vielen als rassistisch und frauenfeindlich empfunden, während ihre Anhänger sie als Ausdruck einer nötigen Kritik an der Integrationspolitik und den sozialen Missständen interpretierten.
       </p>
 
-<div class="smallvideo-container">
-  <div class="video-wrapper">            <iframe
-              src="https://www.youtube.com/embed/ZEGj1T0pnR0?si=xdAouOxOxm6CHV75"
-              title="Alice Weidel im Bundestag: "Kopftuchmädchen und andere Taugenichtse" "
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
-          </div>
-   </div>
+      <div class="smallvideo-container">
+        <div class="video-wrapper">
+          <iframe
+                    src="https://www.youtube.com/embed/ZEGj1T0pnR0?si=xdAouOxOxm6CHV75"
+                    title="Alice Weidel im Bundestag: "Kopftuchmädchen und andere Taugenichtse" "
+                    frameborder="0"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+         </div>
     
         <p class="party-highlight-date">
           <strong>Zeitraum:</strong> August 2020
