how it works - gleiche länge

--- a/index.html
+++ b/index.html
@@ -131,18 +131,16 @@
               <div class="step-number" aria-hidden="true">1</div>
               <h3>Durchsuchen</h3>
               <p>
-                Entdecken Sie Fakten, die gerne in Vergessenheit geraten und
-                hinterfragen Sie, was wirklich hinter den politischen Fassaden
-                steckt - und fragen Sie sich, warum sie so wenig Beachtung
-                finden.
+                Finden Sie verborgene Wahrheiten heraus – oder decken Sie auf,
+                warum diese oft im Dunkeln bleiben.
               </p>
             </li>
             <li class="step">
               <div class="step-number" aria-hidden="true">2</div>
               <h3>Vergleichen</h3>
               <p>
-                Setzen Sie politische Entscheidungen und Positionen ins
-                Verhältnis – und gewinnen Sie so ein klareres Bild.
+                Prüfen Sie politische Aussagen genau – oder erkennen Sie, wo
+                Täuschung die Oberhand gewinnt.
               </p>
             </li>
             <li class="step">
